--- a/assessment-competencies.html
+++ b/assessment-competencies.html
@@ -235,7 +235,7 @@
         teacher_id: user.id,
         created_by: user.id
       }, {
-        onConflict: "assessment_id,student_id,subject_id,competency_id"
+        onConflict: "assessment_id,student_id,competency_id"
       })
       .select("id")
       .single();
